// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationButton styles should render with default styles 1`] = `
.circuit-3 {
  border-radius: 0;
  border-right: 0;
  font-weight: 400;
  border-color: #D8DDE1;
}

.circuit-3:focus {
  border-color: #D8DDE1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-3:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-3:hover:focus {
  box-shadow: none;
}

.circuit-1 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
  border-radius: 0;
  border-right: 0;
  font-weight: 400;
  border-color: #D8DDE1;
}

.circuit-1:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-1:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-1:hover {
  background-color: #D8DDE1;
}

.circuit-1:hover,
.circuit-1:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-1[disabled],
.circuit-1:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-1:focus {
  border-color: #D8DDE1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-1:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-1:hover:focus {
  box-shadow: none;
}

<PaginationButton
  active={false}
  currentPage={1}
  onClick={[MockFunction]}
>
  <Styled(Button)
    name={1}
    onClick={[Function]}
    primary={false}
    size="kilo"
  >
    <Button
      className="circuit-3 circuit-0"
      disabled={false}
      flat={false}
      href={null}
      name={1}
      onClick={[Function]}
      plain={false}
      primary={false}
      secondary={false}
      size="kilo"
      stretch={false}
      target={null}
    >
      <RegularButton
        className="circuit-3 circuit-0"
        disabled={false}
        flat={false}
        href={null}
        name={1}
        onClick={[Function]}
        primary={false}
        secondary={false}
        size="kilo"
        stretch={false}
        target={null}
      >
        <Styled(button)
          className="circuit-3 circuit-0"
          disabled={false}
          flat={false}
          name={1}
          onClick={[Function]}
          primary={false}
          secondary={false}
          size="kilo"
          stretch={false}
          target={null}
        >
          <button
            className="circuit-0 circuit-1 circuit-2"
            disabled={false}
            name={1}
            onClick={[Function]}
            size="kilo"
            target={null}
          >
            1
          </button>
        </Styled(button)>
      </RegularButton>
    </Button>
  </Styled(Button)>
</PaginationButton>
`;

exports[`PaginationButton styles should render with default styles when have plain false 1`] = `
.circuit-3 {
  border-radius: 0;
  border-right: 0;
  font-weight: 400;
  border-color: #D8DDE1;
}

.circuit-3:focus {
  border-color: #D8DDE1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-3:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-3:hover:focus {
  box-shadow: none;
}

.circuit-1 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
  border-radius: 0;
  border-right: 0;
  font-weight: 400;
  border-color: #D8DDE1;
}

.circuit-1:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-1:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-1:hover {
  background-color: #D8DDE1;
}

.circuit-1:hover,
.circuit-1:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-1[disabled],
.circuit-1:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-1:focus {
  border-color: #D8DDE1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-1:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-1:hover:focus {
  box-shadow: none;
}

<PaginationButton
  active={false}
  currentPage={1}
  onClick={[MockFunction]}
  plain={true}
>
  <Styled(Button)
    name={1}
    onClick={[Function]}
    primary={false}
    size="kilo"
  >
    <Button
      className="circuit-3 circuit-0"
      disabled={false}
      flat={false}
      href={null}
      name={1}
      onClick={[Function]}
      plain={false}
      primary={false}
      secondary={false}
      size="kilo"
      stretch={false}
      target={null}
    >
      <RegularButton
        className="circuit-3 circuit-0"
        disabled={false}
        flat={false}
        href={null}
        name={1}
        onClick={[Function]}
        primary={false}
        secondary={false}
        size="kilo"
        stretch={false}
        target={null}
      >
        <Styled(button)
          className="circuit-3 circuit-0"
          disabled={false}
          flat={false}
          name={1}
          onClick={[Function]}
          primary={false}
          secondary={false}
          size="kilo"
          stretch={false}
          target={null}
        >
          <button
            className="circuit-0 circuit-1 circuit-2"
            disabled={false}
            name={1}
            onClick={[Function]}
            size="kilo"
            target={null}
          >
            1
          </button>
        </Styled(button)>
      </RegularButton>
    </Button>
  </Styled(Button)>
</PaginationButton>
`;
